memoized med script

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           strokes[i] = new Tone.Player('wav/stroke' + i + '.wav').toMaster();
       }
       charData = loadJSON('chardata.json');
-      wordData = loadJSON('words-trad.json');
+      wordData = loadJSON('words-simp.json');
       conf = loadJSON('config.json');
     }
 
