--- a/index.html
+++ b/index.html
@@ -6,24 +6,11 @@
   <title>autochar</title>
   <script src="node_modules/p5/lib/p5.min.js"></script>
   <script src="node_modules/tone/build/Tone.min.js"></script>
+  <script src="node_modules/fast-levenshtein/levenshtein.js"></script>
   <script src="cutils.js"></script>
   <script src="automachar.js"></script>
   <link rel="stylesheet" type="text/css" href="style.css">
   <script>
-    var bell, typer, conf, word, tid, strokes = [];
-    var wmed = '';
-    var def = '';
-    var showDefs = 1;
-    var showMed = 1;
-    var doSound = 1;
-    var invertText = 0;
-    var eraseSpeed = 0;
-    var strokeDelay = 300;
-    var bgcol = [245, 245, 245];
-    var hitcol = [0, 0, 0];
-    var txtcol = [0, 0, 0];
-    var rgb = [0, 0, 0];
-
     function preload()
     {
       if (doSound)
@@ -32,8 +19,9 @@
         for (var i = 0; i <= 45; i++)
           strokes[i] = new Tone.Player('wav/stroke' + i + '.wav').toMaster();
       }
-      charData = loadJSON('chardata.json');
-      wordData = loadJSON('words-simp.json');
+      chars = loadJSON('chardata.json');
+      trad = loadJSON('words-trad.json');
+      simp = loadJSON('words-simp.json');
       conf = loadJSON('config.json');
     }
 
@@ -43,13 +31,15 @@
       textAlign(CENTER);
       textSize(14);
 
-      util = new CharUtils(charData, wordData, 1);
-      typer = new Automachar(onActionComplete, onNextTarget);
+      util = new CharUtils(chars, trad, simp, Levenshtein);
+      typer = new Automachar(util, onActionComplete, onNextTarget);
       parseConf();
 
+      memt = millis();
       word = typer.word.literal;
-      def = showDefs ? util.definition(word) : '';
-      console.log("    -> " + word, def);
+      def = showDefs ? typer.word.definition : '';
+      console.log("[ ] -> " + word, def);
+
       next();
     }
 
@@ -60,6 +50,7 @@
       typer.draw(this._renderer, txtcol);
       showDefs && text(def, width / 2, height - 10);
       showMed && text(wmed, width - 10, 15);
+      doPerf && logPerf();
     }
 
     function next()
@@ -86,21 +77,17 @@
     {
       if (next)
       {
-        for (var i = 0; i < rgb.length; i++)
-        {
-          rgb[i] = hitcol[i];
-          if (!invertText) txtcol[i] = 255;
-        }
-
+        flashColors();
         playStroke(true);
         playBell()
 
-        if (showDefs) def = util.definition(next);
+        if (showDefs) def = next.definition +
+          (util.language().startsWith('s') ? ' [s]' : '');
 
-        console.log(word + " -> " + next, med, def);
+        console.log(word + " -> " + next.literal, med, def);
 
         wmed = med;
-        word = next;
+        word = next.literal;
       }
       else
       {
@@ -108,7 +95,17 @@
       }
     }
 
-    function playBell() {
+    function flashColors()
+    {
+      for (var i = 0; i < rgb.length; i++)
+      {
+        rgb[i] = hitcol[i];
+        if (!invertText) txtcol[i] = 255;
+      }
+    }
+
+    function playBell()
+    {
       //doSound && bell.play(0, random(.6, .9), random(.5, .8));
       if (doSound)
       {
@@ -118,7 +115,8 @@
       }
     }
 
-    function playStroke(quiet) {
+    function playStroke(quiet)
+    {
       // delay, rate, amp, cue, duration
       //doSound && strokes[random(strokes.length) << 0]
       //.play(0, random(.6, .9), random(.05, .3), 0, random(.01, 0.1));
@@ -135,6 +133,7 @@
     {
       if (false && key == ' ') clearTimeout(tid);
       if (key == 's') eraseSpeed = eraseSpeed > 0 ? 0 : 35;
+      if (key == 'l') util.toggleLang();
     }
 
     function adjustColor()
@@ -146,6 +145,17 @@
           txtcol[i] = 255 - floor(rgb[i]);
         else
         if (txtcol[i] > 0) txtcol[i] -= 5;
+      }
+    }
+
+    function logPerf()
+    {
+      if (performance && performance.memory && millis() - memt > 15000)
+      {
+        console.log('Perf: ' + round(frameRate()) + ' fps ' +
+          round(performance.memory.usedJSHeapSize / 1000000) +
+          '/' + round(performance.memory.jsHeapSizeLimit / 1000000) + ' MB');
+        memt = millis();
       }
     }
 
@@ -173,6 +183,22 @@
         if (invertText) txtcol[i] = 255 - rgb[i];
       }
     }
+
+    var chars, memt, simp, trad, bell, typer, conf, word, tid;
+    var strokes = [];
+    var wmed = '';
+    var def = '';
+    var showDefs = 1;
+    var showMed = 1;
+    var doSound = 1;
+    var doPerf = 1;
+    var invertText = 0;
+    var eraseSpeed = 0;
+    var strokeDelay = 300;
+    var bgcol = [245, 245, 245];
+    var hitcol = [0, 0, 0];
+    var txtcol = [0, 0, 0];
+    var rgb = [0, 0, 0];
   </script>
 </head>
 
