--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       typer = new Automachar(util, onActionComplete, onNextTarget);
       parseConf();
 
-      memt = millis();
+      memt = millis() - 15000;
       word = typer.word.literal;
       console.log("[ ] -> " + word);
 
@@ -48,7 +48,7 @@
       background(rgb[0], rgb[1], rgb[2]);
       typer.draw(this._renderer, txtcol);
       showDefs && text(def, width / 2, height - 10);
-      showMed && text(wmed, width - 10, 15);
+      showMed && text(wmed, width - 12, 15);
       doPerf && logPerf();
     }
 
@@ -64,11 +64,12 @@
       }
     }
 
-    function onNextTarget(next, numStrokes)
+    function onNextTarget(next, numStrokes, triggered)
     {
       var numStrokes = typer.currentStrokeCount;
       var nSpeed = min(1, numStrokes / 12);
       strokeDelay = map(nSpeed, 0, 1, 1000, 200);
+      if (triggered) console.log('handle-trigger!');
       //console.log(numStrokes, nSpeed, strokeDelay);
     }
 
@@ -80,12 +81,13 @@
         playStroke(true);
         playBell()
 
-        if (showDefs && next.definition) def = next.definition +
-          (util.language().startsWith('s') ? ' [s]' : '');
+        if (showDefs && next.definition) def = next.definition;
 
-        console.log(word + " -> " + next.literal, med, def);
+        wmed = med + (util.language().startsWith('s') ? 's' : '');
 
-        wmed = med;
+        console.log(word + " -> " + next.literal, wmed, def);
+
+
         word = next.literal;
       }
       else
@@ -149,11 +151,11 @@
 
     function logPerf()
     {
-      if (performance && performance.memory && millis() - memt > 15000)
+      if (performance && performance.memory && millis() - memt > 20000)
       {
-        console.log('Perf: ' + round(frameRate()) + ' fps ' +
+        console.log('Perf: ' + round(frameRate()) + ' fps, ' +
           round(performance.memory.usedJSHeapSize / 1000000) +
-          '/' + round(performance.memory.jsHeapSizeLimit / 1000000) + ' MB');
+          '/' + round(performance.memory.jsHeapSizeLimit / 1000000) + ' MB heap');
         memt = millis();
       }
     }
