--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>autochar</title>
   <script src="node_modules/p5/lib/p5.min.js"></script>
   <script src="node_modules/tone/build/Tone.min.js"></script>
+  <script src="./StartAudioContext.js"></script>
   <script src="node_modules/fast-levenshtein/levenshtein.js"></script>
   <script src="cutils.js"></script>
   <script src="autochar.js"></script>
@@ -185,6 +186,12 @@
           console.log('config.trgcol: ' + trgcol);
         }
         else console.log('default.trgcol: ' + trgcol);
+
+        if (conf.prod && conf.prod == 'true')
+        {
+          console.log('config.prod: ' + true);
+        }
+        else console.log('default.prod: ' + true);
       }
 
       for (var i = 0; i < rgb.length; i++)
@@ -212,6 +219,7 @@
     var txtcol = [0, 0, 0];
     var trgcol = [150, 0, 0];
     var rgb = [0, 0, 0];
+    var PROD = false;
   </script>
 </head>
 
