--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
 
     function setup()
     {
-      createCanvas(680, 490);
+      createCanvas(1024, 768);
+      //createCanvas(680, 490);
+
       textAlign(CENTER);
       textSize(14);
 
